# MarkerPose

./: .gitignore  LICENSE  README.md
C++/: CMakeLists.txt  README.md  robot_test.cpp  train_ellipsegnet.cpp  train_superpoint.cpp
C++/src/: models.hpp
C++/src/MarkerPose/: markerpose_model.cpp
C++/src/ellipsegnet/: CMakeLists.txt  dataset.cpp  dataset.hpp  ellipsegnet_model.cpp
C++/src/superpoint/: CMakeLists.txt  dataset.cpp  dataset.hpp  superpoint_model.cpp
C++/src/transformations/: CMakeLists.txt  mask_trans.cpp  pixel_trans.cpp  points_trans.cpp  transformations.hpp
C++/src/utils/: CMakeLists.txt  ellipsegnet_metrics.cpp  image_list.cpp  markerpose_utils.cpp  superpoint_utils.cpp  utils.hpp
Python/: README.md  robot_test.py  train_ellipsegnet.py  train_superpoint.py
Python/modules/: dataset.py  models.py  transformations.py  utils.py
